--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,22 +32,21 @@
       <div class="informacoes-abas">
         <div class="informacao">
           <h3 class="sub-titulo">Sobre</h3>
-
           <div class="descricao">
             <p>Olá! Meu nome é Gabriel Gonçalves, seja bem-vindo(a)!</p>
-
             <p>
               Sou uma alguém curioso e apaixonado
-              pela programação desde que a descobri quando criança. Passei a ter muita vontade de trabalhar na área desde então, recentemente comecei a estudar a Stack <span>Front-End</span> de forma autodidata por meio de cursos e eventos de programação. Gosto de ler, estudar, escutar musica, jogar e assistir séries e filmes.
+              pela programação desde que a descobri quando criança. Passei a ter muita vontade de trabalhar na área
+              desde então, recentemente comecei a estudar a Stack <span>Front-End</span> de forma autodidata por meio de
+              cursos e eventos de programação. Gosto de ler, estudar, escutar musica, jogar e assistir séries e filmes.
             </p>
-
           </div>
         </div>
         <div class="informacao">
           <h3 class="sub-titulo">Minhas redes</h3>
           <ul class="redes-sociais">
             <li>
-              <a href="" target="_blank" class="curriculo" >Currículo</a>
+              <a href="" target="_blank" class="curriculo">Currículo</a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/dev-gabriel-leite/" target="_blank" class="linkedin">Linkedin</a>
@@ -60,4 +60,5 @@
     </div>
   </main>
 </body>
+
 </html>
