--- a/index.html
+++ b/index.html
@@ -1,69 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/png" sizes="32x32" href="./imagens/favicon-32x32.png" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="icon" type="image/png" sizes="32x32" href="./imagens/favicon-32x32.png" />
 
-		<link rel="stylesheet" href="./src/css/reset.css" />
-		<link rel="stylesheet" href="./src/css/rolagem.css" />
-		<link rel="stylesheet" href="./src/css/estilos.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
 
-		<title>Projeto Mini Portfólio - MapaDev Week</title>
-	</head>
-	<body>
-		<main class="cartao">
-			<div class="minhas-informacoes">
-				<img src="./src/imagens/foto-perfil.jpg" alt="foto de perfil" />
-				<h1 class="nome">Rodrigo da Silva</h1>
-				<h2 class="cargo">Desenvolvedor Frontend Júnior</h2>
-			</div>
+	<link rel="stylesheet" href="./src/css/reset.css" />
+	<link rel="stylesheet" href="./src/css/rolagem.css" />
+	<link rel="stylesheet" href="./src/css/estilos.css" />
 
-			<div class="conteudo">
-				<ul class="abas">
-					<li class="aba selecionado">
-						<img src="./src/imagens/sobre.gif" alt="ícone de sobre mim" />
-					</li>
+	<link rel="shortcut icon" href="src/imagens/Favicon.png" type="image/x-icon">
+	<title>Projeto Mini Portfólio - MapaDev Week</title>
+</head>
 
-					<li class="aba">
-						<img src="./src/imagens/coracao.gif" alt="ícone de redes sociais" />
-					</li>
-				</ul>
+<body>
+	<main class="cartao">
+		<div class="minhas-informacoes">
+			<img class="foto-perfil" src="./src/imagens/profile-photo.jpeg" alt="foto de perfil" />
+			<h1 class="nome">Gabriel Gonçalves</h1>
+			<h2 class="cargo">Desenvolvedor Frontend</h2>
+		</div>
 
-				<div class="informacoes-abas">
-					<div class="informacao selecionado">
-						<h3 class="sub-titulo">Sobre</h3>
-						<div class="descricao">
-							<p>Oi! meu nome é Rodrigo da Silva, seja bem-vindo(a)!</p>
+		<div class="conteudo">
+			<ul class="abas">
+				<li class="aba selecionado">
+					<img src="./src/imagens/sobre.gif" alt="ícone de sobre mim" />
+				</li>
 
-							<p>
-								Sou uma pessoa apaixonada pela programação desde que eu tinha 15 anos. Sempre tive o sonho de trabalhar com programação e atualmente comecei a colocar esse sonho em prática estudando
-								<span>HTML, CSS e JavaScript.</span>
-								Gosto muito de café (até demais), e meus principais hobbies são jogar MMO RPG, ver animes e séries.
-							</p>
-						</div>
-					</div>
-					<div class="informacao">
-						<h3 class="sub-titulo">Minhas Redes</h3>
-						<ul class="redes-sociais">
-							<li>
-								<a href="https://docs.google.com/document/d/1y29qJelptW_dI6KlpK9LLGVusSQfaGkfQ6sTuH9CJcM/edit?usp=sharing" target="_blank" class="curriculo">Currículo</a>
-							</li>
-							<li>
-								<a href="https://www.linkedin.com/company/dev-em-dobro/" target="_blank" class="linkedin">Linkedln</a>
-							</li>
-							<li>
-								<a href="https://github.com/devemdobro" target="_blank" class="github">GitHub</a>
-							</li>
-						</ul>
+				<li class="aba">
+					<img src="./src/imagens/coracao.gif" alt="ícone de redes sociais" />
+				</li>
+			</ul>
+
+			<div class="informacoes-abas">
+				<div class="informacao selecionado">
+					<h3 class="sub-titulo">Sobre</h3>
+					<div class="descricao">
+						<p>Oi! meu nome é Gabriel Gonçalves, seja bem-vindo(a)!</p>
+						<br>
+						<p>
+							Sou desenvolvedor Front-end admirador pelo client-side e amante de livros, filmes e jogos 🕹️.
+						</p>
+						<br>
+						<p>Sou uma pessoa apaixonada pela programação desde de criança. Sempre tive o sonho de trabalhar
+						com programação e atualmente comecei a colocar esse sonho em prática estudando
+						<span>HTML, CSS e JavaScript.</span> nas
+						demais plataformas como Rocketseat, Udemy e Linkedin learning para certificar meu aprendizado 🚀
+						</p>
+						<br>
+						<p>Além disso, realizo desenvolvo site para terceiros e projetos próprios.
+					</p>
+					<br>
 					</div>
 				</div>
+				<div class="informacao">
+					<h3 class="sub-titulo">Minhas Redes</h3>
+					<ul class="redes-sociais">
+						<li>
+							<a href="https://drive.google.com/file/d/1FoOXbFKC6TRaSxb6HWhx_OAxnHpKYra-/view" target="_blank" class="curriculo">Currículo</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/dev-gabriel-leite/" target="_blank" class="linkedin">Linkedln</a>
+						</li>
+						<li>
+							<a href="https://github.com/GabrielFleckl" target="_blank" class="github">GitHub</a>
+						</li>
+					</ul>
+				</div>
 			</div>
-		</main>
-		<script src="./src/js/index.js"></script>
-	</body>
+		</div>
+	</main>
+	<script src="./src/js/index.js"></script>
+</body>
+
 </html>
