--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="./src/css/estilos.css" />
 
 	<link rel="shortcut icon" href="src/imagens/Favicon.png" type="image/x-icon">
-	<title>Projeto Mini Portfólio - MapaDev Week</title>
+	<title>Mini Portfólio</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 		<div class="minhas-informacoes">
 			<img class="foto-perfil" src="./src/imagens/profile-photo.jpeg" alt="foto de perfil" />
 			<h1 class="nome">Gabriel Gonçalves</h1>
-			<h2 class="cargo">Desenvolvedor Frontend</h2>
+			<h2 class="cargo">Desenvolvedor Frontend Junior</h2>
 		</div>
 
 		<div class="conteudo">
@@ -44,25 +44,26 @@
 						<p>Oi! meu nome é Gabriel Gonçalves, seja bem-vindo(a)!</p>
 						<br>
 						<p>
-							Sou desenvolvedor Front-end admirador pelo client-side e amante de livros, filmes e jogos 🕹️.
+							Sou desenvolvedor Front-end admirador pelo client-side e amante de livros, filmes e jogos. Além disso,
+							desenvolvo site para terceiros e projetos próprios, adicionando todos ao meu github 🕹️.
 						</p>
 						<br>
 						<p>Sou uma pessoa apaixonada pela programação desde de criança. Sempre tive o sonho de trabalhar
-						com programação e atualmente comecei a colocar esse sonho em prática estudando
-						<span>HTML, CSS e JavaScript.</span> nas
-						demais plataformas como Rocketseat, Udemy e Linkedin learning para certificar meu aprendizado 🚀
+							com programação e atualmente comecei a colocar esse sonho em prática estudando
+							<span>HTML, CSS e JavaScript.</span> nas
+							demais plataformas como Rocketseat, Udemy e Linkedin learning para certificar meu aprendizado 🚀.
 						</p>
 						<br>
-						<p>Além disso, realizo desenvolvo site para terceiros e projetos próprios.
-					</p>
-					<br>
+
+
 					</div>
 				</div>
 				<div class="informacao">
 					<h3 class="sub-titulo">Minhas Redes</h3>
 					<ul class="redes-sociais">
 						<li>
-							<a href="https://drive.google.com/file/d/1FoOXbFKC6TRaSxb6HWhx_OAxnHpKYra-/view" target="_blank" class="curriculo">Currículo</a>
+							<a href="https://drive.google.com/file/d/1FoOXbFKC6TRaSxb6HWhx_OAxnHpKYra-/view" target="_blank"
+								class="curriculo">Currículo</a>
 						</li>
 						<li>
 							<a href="https://www.linkedin.com/in/dev-gabriel-leite/" target="_blank" class="linkedin">Linkedln</a>
