--- a/index.html
+++ b/index.html
@@ -41,12 +41,7 @@
 				<div class="informacao selecionado">
 					<h3 class="sub-titulo">Sobre</h3>
 					<div class="descricao">
-						<p>Oi! meu nome é Gabriel Gonçalves, seja bem-vindo(a)!</p>
-						<br>
-						<p>
-							Sou desenvolvedor Front-end admirador pelo client-side e amante de livros, filmes e jogos. Além disso,
-							desenvolvo site para terceiros e projetos próprios, adicionando todos ao meu github 🕹️.
-						</p>
+						<p>Oi! meu nome é Gabriel Gonçalves, seja bem-vindo(a) 👨‍💻!</p>
 						<br>
 						<p>Sou uma pessoa apaixonada pela programação desde de criança. Sempre tive o sonho de trabalhar
 							com programação e atualmente comecei a colocar esse sonho em prática estudando
@@ -54,6 +49,13 @@
 							demais plataformas como Rocketseat, Udemy e Linkedin learning para certificar meu aprendizado 🚀.
 						</p>
 						<br>
+						<p>
+							Além disso sou eterno admirador pelo client-side e amante de livros, filmes e jogos. Também
+							desenvolvo site para terceiros e projetos próprios, adicionando todos ao meu github 🕹️.
+						</p>
+						<br>
+						
+						
 
 
 					</div>
