--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
 
 	<link rel="stylesheet" href="./src/css/reset.css" />
-	<link rel="stylesheet" href="./src/css/rolagem.css" />
-	<link rel="stylesheet" href="./src/css/estilos.css" />
+	<link rel="stylesheet" href="./src/css/scroll.css" />
+	<link rel="stylesheet" href="./src/css/style.css" />
 
 	<link rel="shortcut icon" href="src/imagens/Favicon.png" type="image/x-icon">
 	<title>Mini Portfólio</title>
